# docs/openapi-definition/openapi.yaml
@@ -107,6 +107,17 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AccountResponse'
+        "401":
+          description: Not Authorized
+        "403":
+          description: Not Allowed
+      security:
+      - SecurityScheme:
+        - Normal
+        - Admin
+      - SecurityScheme:
+        - Normal
+        - Admin
     delete:
       tags:
       - Account Operations
